force-app/main/default/objects/GiftEntry/fields/FirstName_MP_Primary__c.field-meta.xml
<CustomField>
    <fullName>FirstName_MP_Primary__c</fullName>
    <label>FirstName_MP_Primary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>