force-app/main/default/objects/GiftEntry/fields/GEM_GiftDesignation2MatchScore__c.field-meta.xml
<CustomField>
    <fullName>GEM_GiftDesignation2MatchScore__c</fullName>
    <label>GEM Gift Designation 2 Match Score</label>
    <description>Stores the weight (0.0–1.0) of the matching rule that resolved GiftDesignation2Id. Populated by the Gift Entry Matching batch.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>