force-app/main/default/objects/GiftEntry/fields/GEM_MatchAmount__c.field-meta.xml
<CustomField>
    <fullName>GEM_MatchAmount__c</fullName>
    <description>Employer matching gift amount imported from the Benevity 'Match Amount' column. When greater than zero, the BenevityEmployerMatchingBatch will create a separate GiftEntry for the employer with this value as GiftAmount.</description>
    <label>GEM Match Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>