force-app/main/default/objects/GiftEntry/fields/GEM_MatchingGiftCreated__c.field-meta.xml
<CustomField>
    <fullName>GEM_MatchingGiftCreated__c</fullName>
    <description>Set to true by BenevityEmployerMatchingBatch after a corresponding employer GiftEntry has been created. Prevents duplicate processing on subsequent batch runs. Use this field in the EmployeeGiftCondition__c setting: GEM_MatchingGiftCreated__c = false</description>
    <defaultValue>false</defaultValue>
    <label>GEM Matching Gift Created</label>
    <type>Checkbox</type>
</CustomField>