force-app/main/default/objects/GiftEntry/fields/LastName_MP_Secondary__c.field-meta.xml
<CustomField>
    <fullName>LastName_MP_Secondary__c</fullName>
    <label>LastName_MP_Secondary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>