force-app/main/default/objects/GiftEntry/fields/Matching_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Amount__c</fullName>
    <description>Employer matching gift amount imported from the Benevity 'Match Amount' column. When greater than zero, the BenevityEmployerMatchingBatch will create a separate GiftEntry for the employer using this value as GiftAmount.</description>
    <label>Matching Gift Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>